--- a/client/redhvid-client/Redhvid.csproj
+++ b/client/redhvid-client/Redhvid.csproj
@@ -1,12 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows10.0.17763.0</TargetFramework>
-    <RootNamespace>Redhvid</RootNamespace>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <StartupObject>Redhvid.Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +14,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.0.1" />
+    <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
+    <PackageReference Include="Usb.Events" Version="1.1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +23,11 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -35,8 +39,18 @@
   </ItemGroup>
 
   <ItemGroup>
-	<Protobuf Include="../../protos/redhvid/flight_video_distributor.proto" GrpcServices="Client" />	
+    <Folder Include="Resources\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Protobuf Include="..\..\protos\redhvid\flight_video_distributor.proto" GrpcServices="Client" />
+  </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+	
 </Project>
