--- a/redhvid-client/Properties/Settings.settings
+++ b/redhvid-client/Properties/Settings.settings
@@ -20,5 +20,8 @@
   &lt;string&gt;USB\VID_0951&amp;amp;PID_16AE\408D5CBEC94CE440793FD5CA&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="FFmpegExecutable" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Z:\Workspace\redhvid\client\ffmpeg</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
