--- a/redhvid-client/Properties/Settings.settings
+++ b/redhvid-client/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="FFmpegExecutable" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\Program Files\ffmpeg\bin</Value>
     </Setting>
+    <Setting Name="FFmpegFlags" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">-c:v libx265 -crf 20 -preset ultrafast</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
