--- a/redhvid-client/Properties/Settings.settings
+++ b/redhvid-client/Properties/Settings.settings
@@ -23,6 +23,9 @@
     <Setting Name="FFmpegExecutable" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\Program Files\ffmpeg\bin</Value>
     </Setting>
+    <Setting Name="JobExpiryDays" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
     <Setting Name="FFmpegFlags" Type="System.String" Scope="Application">
       <Value Profile="(Default)">-c:v libx265 -crf 20 -preset ultrafast</Value>
     </Setting>
