refactor: update settings properties

--- a/Blackbox/Properties/Settings.settings
+++ b/Blackbox/Properties/Settings.settings
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Redhvid.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Bespin.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="GrpcHost" Type="System.String" Scope="User">
-      <Value Profile="(Default)">127.0.0.1</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="GrpcPort" Type="System.UInt32" Scope="User">
       <Value Profile="(Default)">50051</Value>
@@ -14,11 +14,8 @@
     <Setting Name="TranscodingEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="Devices" Type="System.Collections.Specialized.StringCollection" Scope="User">
-      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
-&lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;USB\VID_0951&amp;amp;PID_16AE\408D5CBEC94CE440793FD5CA&lt;/string&gt;
-&lt;/ArrayOfString&gt;</Value>
+    <Setting Name="Devices" Type="System.Collections.Generic.List&lt;Bespin.Device&gt;" Scope="User">
+      <Value Profile="(Default)">&lt;ArrayOfDevice xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;&lt;/ArrayOfDevice&gt;</Value>
     </Setting>
     <Setting Name="FFmpegExecutable" Type="System.String" Scope="User">
       <Value Profile="(Default)">C:\Program Files\ffmpeg\bin</Value>
@@ -27,10 +24,13 @@
       <Value Profile="(Default)">30</Value>
     </Setting>
     <Setting Name="FFmpegFlags" Type="System.String" Scope="User">
-      <Value Profile="(Default)">-c:v libx265 -crf 20 -preset ultrafast</Value>
+      <Value Profile="(Default)">-preset ultrafast</Value>
     </Setting>
     <Setting Name="MaxMessageSize" Type="System.UInt32" Scope="User">
-      <Value Profile="(Default)">10000</Value>
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="Explorer" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
