chore: update version numbers

--- a/Blackbox/Blackbox.csproj
+++ b/Blackbox/Blackbox.csproj
@@ -12,6 +12,7 @@
 		<StartupObject>Blackbox.Program</StartupObject>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+		<Version>0.0.1-beta</Version>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
