chore: remove message size input from settings form

--- a/Blackbox/Properties/Settings.settings
+++ b/Blackbox/Properties/Settings.settings
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Bespin.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Blackbox.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="GrpcHost" Type="System.String" Scope="User">
@@ -25,9 +25,6 @@
     </Setting>
     <Setting Name="FFmpegFlags" Type="System.String" Scope="User">
       <Value Profile="(Default)">-preset ultrafast</Value>
-    </Setting>
-    <Setting Name="MaxMessageSize" Type="System.UInt32" Scope="User">
-      <Value Profile="(Default)">10</Value>
     </Setting>
     <Setting Name="Explorer" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
