--- a/Blackbox/Properties/Settings.settings
+++ b/Blackbox/Properties/Settings.settings
@@ -14,7 +14,7 @@
     <Setting Name="TranscodingEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="Devices" Type="System.Collections.Generic.List&lt;Bespin.Device&gt;" Scope="User">
+    <Setting Name="Devices" Type="System.Collections.Generic.List&lt;Blackbox.Device&gt;" Scope="User">
       <Value Profile="(Default)">&lt;ArrayOfDevice xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;&lt;/ArrayOfDevice&gt;</Value>
     </Setting>
     <Setting Name="FFmpegExecutable" Type="System.String" Scope="User">
