--- a/Blackbox.Client/Blackbox.Client.csproj
+++ b/Blackbox.Client/Blackbox.Client.csproj
@@ -28,9 +28,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Google.Protobuf" Version="3.15.8" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.37.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.37.0">
+		<PackageReference Include="Google.Protobuf" Version="3.32.0" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.72.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
@@ -40,11 +40,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\..\Xabe.FFmpeg\src\Xabe.FFmpeg\Xabe.FFmpeg.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Protobuf Include="..\protocol\job.proto" GrpcServices="Client" />
+		<Protobuf Include="protocol\job.proto" GrpcServices="Client" />
 	</ItemGroup>
 
 	<ItemGroup>
