feat: Inital auth and template login

--- a/Blackbox/App.config
+++ b/Blackbox/App.config
@@ -31,6 +31,9 @@
             <setting name="Explorer" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SelectedTemplateId" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Blackbox.Properties.Settings>
     </userSettings>
 </configuration>
