--- a/Blackbox/Properties/Settings.settings
+++ b/Blackbox/Properties/Settings.settings
@@ -24,10 +24,13 @@
       <Value Profile="(Default)">30</Value>
     </Setting>
     <Setting Name="FFmpegFlags" Type="System.String" Scope="User">
-      <Value Profile="(Default)">-c:v libsvtav1 -crf 30 -preset 10</Value>
+      <Value Profile="(Default)">-c:v libsvtav1 -crf 30 -preset 8</Value>
     </Setting>
     <Setting Name="Explorer" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="SelectedTemplateId" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
