--- a/Blackbox/App.config
+++ b/Blackbox/App.config
@@ -34,6 +34,16 @@
             <setting name="SelectedTemplateId" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="FFmpegFlavors" serializeAs="Xml">
+                <value>
+                    <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                        <string>-c:v libx264 -preset ultrafast -crf 18</string>
+                        <string>-c:v libx264 -preset superfast -crf 19</string>
+                        <string>-c:v libsvtav1 -crf 28 -preset 10 -g 600</string>
+                        <string>-c:v libsvtav1 -crf 30 -preset 8 -g 600</string>
+                    </ArrayOfString>
+                </value>
+            </setting>
         </Blackbox.Properties.Settings>
     </userSettings>
 </configuration>
