--- a/Blackbox/Blackbox.csproj
+++ b/Blackbox/Blackbox.csproj
@@ -25,6 +25,7 @@
 		<PackageReference Include="MediaDevices" Version="1.10.0" />
 		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.3" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="SuchByte.SpeedTestSharp" Version="1.0.2" />
 		<PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
 		<PackageReference Include="System.Net.Http" Version="4.3.4" />
 		<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
