--- a/Blackbox/Properties/Settings.settings
+++ b/Blackbox/Properties/Settings.settings
@@ -32,5 +32,14 @@
     <Setting Name="SelectedTemplateId" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="FFmpegFlavors" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"&gt;
+  &lt;string&gt;-c:v libx264 -preset ultrafast -crf 18&lt;/string&gt;
+  &lt;string&gt;-c:v libx264 -preset superfast -crf 19&lt;/string&gt;
+  &lt;string&gt;-c:v libsvtav1 -crf 28 -preset 10 -g 600&lt;/string&gt;
+  &lt;string&gt;-c:v libsvtav1 -crf 30 -preset 8 -g 600&lt;/string&gt;
+&lt;/ArrayOfString&gt;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
