Fix: Allow custom selection of transplode encode

--- a/Blackbox/App.config
+++ b/Blackbox/App.config
@@ -8,7 +8,7 @@
     <userSettings>
         <Blackbox.Properties.Settings>
             <setting name="GrpcHost" serializeAs="String">
-                <value />
+                <value>localhost</value>
             </setting>
             <setting name="GrpcPort" serializeAs="String">
                 <value>50051</value>
@@ -43,6 +43,9 @@
                         <string>-c:v libsvtav1 -crf 30 -preset 8 -g 600</string>
                     </ArrayOfString>
                 </value>
+            </setting>
+            <setting name="FlavorSelection" serializeAs="String">
+                <value>Automatic Selection</value>
             </setting>
         </Blackbox.Properties.Settings>
     </userSettings>
